--- a/src/main/webapp/resources/css/form.css
+++ b/src/main/webapp/resources/css/form.css
@@ -17,15 +17,8 @@ html, body, * {
 
 header {
     box-sizing: border-box;
-    padding: 10px;
+    padding: 17px;
     background-color: tomato;
-    font-size: 18px;
-}
-
-.navbar {
-    display: flex;
-    padding: 15px;
-    justify-content: left;
 }
 
 ul {
@@ -34,6 +27,16 @@ ul {
 
 .nav-link {
     color: rgba(255, 255, 255, .5);
+}
+
+a.navbar-link {
+    padding: 8px;
+    color: rgba(255, 255, 255, .5);
+    font-size: 18px;
+}
+
+a.navbar-link:hover {
+    color: white;
 }
 
 a {
